--- a/src/main/resources/templates/level.html
+++ b/src/main/resources/templates/level.html
@@ -11,6 +11,11 @@
             margin: 0;
             font-size: 14px;
         }
+        #rangeList1{
+            display: flex;
+            justify-content: space-around;
+            width: 139px;
+        }
     </style>
 </head>
 <body>
@@ -34,7 +39,13 @@
     <label th:text="${glass.getWidth()}"></label>
         <br>
     <h2>Скорость падения фигур</h2>
-    <input class="speed" type="range" min="0.5" max="2" step="0.5" th:value="${level.speed}">
+    <input class="speed" type="range" min="1" max="4" step="1" th:value="${level.speed}" list="rangeList1">
+    <datalist id="rangeList1">
+        <option value="1" label="0.5">
+        <option value="2" label="1">
+        <option value="3" label="1.5">
+        <option value="4" label="2">
+    </datalist>
     <br>
     <button class="saveLevel">Сохранить настройки уровня</button>
     <script type="text/javascript"
