--- a/src/main/resources/static/css/game.css
+++ b/src/main/resources/static/css/game.css
@@ -14,6 +14,24 @@ body {
 canvas {
     border: 1px solid black;
 }
+
+td{
+    border: 1px black solid;
+    width: 20px;
+    height: 20px;
+    margin: 0;
+    font-size: 14px;
+}
+
+
+#nextFig{
+    margin-left: 80px;
+    height: 90px;
+}
+
+.withgrid {
+    background-image:url("/static/img/grid.png");
+}
 .overlay {
     opacity: 0;
     visibility: hidden;
