--- a/src/main/resources/templates/create-figure.html
+++ b/src/main/resources/templates/create-figure.html
@@ -7,6 +7,7 @@
         td {
             border: 1px black solid;
             color: white;
+            cursor: pointer;
         }
         .menu-item{
             width: 30px;
