Редактирование стиля страницы статистики. Корректировка главной страницы

--- a/src/main/resources/static/css/login_style.css
+++ b/src/main/resources/static/css/login_style.css
@@ -4,13 +4,12 @@
 }
 
 html, body {
-    background-image: url("https://psv4.userapi.com/c236331/u231309478/docs/d53/b5c9cb59850d/IMG_3863.png?extra=SFYI64RUvzy-56mBK0cMNWYFXMCBdMu_q7jqvtifwjVfyWoWOJiCs_3D4lQWM0w4K_CvJMwBIa84VXdm7fB-BTUNR_RrI5QBNEmgzfHD2vJa0sMDy7nl3gew_k8AuRXwS1HE75ocGAeDf3-LZ480MKo");
+    background-image: url("https://cdn-ru0.puzzlegarage.com/img/puzzle/12/178_preview_r.v2.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
     background-color: #52d7be;
-
     height: 100%;
     margin: 0;
     font-size: 15px;
