--- a/src/main/resources/templates/edit-figure.html
+++ b/src/main/resources/templates/edit-figure.html
@@ -7,6 +7,7 @@
     td {
       border: 1px black solid;
       color: white;
+      cursor: pointer;
     }
     .menu-item{
       width: 30px;
@@ -56,7 +57,7 @@
     <td id="3-3">000</td>
   </tr>
 </table>
-<button class="save">Сохранить</button>
+<button id="save">Сохранить</button>
 <script type="text/javascript"
         src="https://code.jquery.com/jquery-1.11.1.js"></script>
 <script type="text/javascript" th:src="@{/js/edit-figure.js}"></script>
