--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -2,31 +2,43 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Настройки</title>
+    <title>Тетрис. Настройки</title>
+    <link media="all" th:href="@{/css/settings.css}" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-    <input hidden id="settingsId" th:value="${settings.getId()}">
-    <input hidden id="username" th:value="${username}">
-    <input hidden id="next1" th:value="${settings.getNext()}">
-    <input hidden id="grid1" th:value="${settings.getGrid()}">
-    <input hidden id="result1" th:value="${settings.getStat()}">
+<a th:href="@{/main}">
+    <div class="menu-item"></div>
+</a>
+<input hidden id="settingsId" th:value="${settings.getId()}">
+<input hidden id="username" th:value="${username}">
+<input hidden id="next1" th:value="${settings.getNext()}">
+<input hidden id="grid1" th:value="${settings.getGrid()}">
+<input hidden id="result1" th:value="${settings.getStat()}">
+<div class="settings-wrapper">
     <h1>Настройки игры</h1>
-        <label>Включить показ следующей фигуры?</label>
-        <input type="checkbox" id="next">
+    <div class="settings-items">
+        <div class="settings-item">
+            <label>Включить показ следующей фигуры?</label>
+            <input type="checkbox" id="next">
+        </div>
         <br>
-        <label>Включить показ сетки?</label>
-        <input type="checkbox" id="grid">
+        <div class="settings-item">
+            <label>Включить показ сетки?</label>
+            <input type="checkbox" id="grid">
+        </div>
         <br>
         <label>Подсчет результата</label>
         <select id="stat">
-            <option value = 0>Не вести</option>
-            <option value = 1>Очки</option>
-            <option value = 2>Время</option>
+            <option value=0>Не вести</option>
+            <option value=1>Очки</option>
+            <option value=2>Время</option>
         </select>
         <br>
-    <button id="saveButton">Сохранить</button>
-    <script type="text/javascript"
-            src="https://code.jquery.com/jquery-1.11.1.js"></script>
-    <script type="text/javascript" th:src="@{/js/settings.js}"></script>
+        <button id="saveButton">Сохранить</button>
+    </div>
+</div>
+<script type="text/javascript"
+        src="https://code.jquery.com/jquery-1.11.1.js"></script>
+<script type="text/javascript" th:src="@{/js/settings.js}"></script>
 </body>
 </html>
