Отредактированы стили страницы фигур

--- a/src/main/resources/templates/figures.html
+++ b/src/main/resources/templates/figures.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <a th:href="@{/main}"><div class="menu-item"></div></a>
+    <button th:href="@{/create-figure}" class="addFigure">Добавить фигуру</button>
    <!-- <h1>Список фигур</h1> -->
-    <a th:href="@{/create-figure}" class="addFigure">Добавить фигуру</a>
     <div class="figure-list">
 
     </div>
