--- a/src/main/resources/static/css/figures.css
+++ b/src/main/resources/static/css/figures.css
@@ -1,3 +1,20 @@
+@font-face {
+    font-family: 'Roboto';
+    src: url(http://fonts.gstatic.com/s/roboto/v15/mErvLBYg_cXG3rLvUsKT_fesZW2xOQ-xsNqO47m55DA.woff2);
+}
+
+html, body {
+    background-image: url("https://cdn-ru0.puzzlegarage.com/img/puzzle/12/178_preview_r.v2.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-color: #52d7be;
+    height: 100%;
+    margin: 0;
+    font-size: 15px;
+    font-family: Roboto;
+}
 .figure{
 
 }
@@ -7,28 +24,35 @@ td{
     heigth: 20px;
     margin: 0;
     font-size: 14px;
+    cursor: default;
 }
 
 .menu-item{
-    width: 30px;
-    height: 30px;
-    background-image: url("https://img.icons8.com/ios/30/000000/home-page.png");
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+    background-image: url("https://img.icons8.com/ios/50/000000/home-page.png");
     background-repeat: no-repeat;
+    background-color: #77dcff;
 }
 
 .addFigure{
     text-decoration: none;
-    margin: 0 auto 15px 100px;
+    left: 10%;
+    border: none;
+    margin-top: 5pt;
     color: black;
     padding: 15px 20px;
-    cursor: pointer;
     width: 200px;
-    border: 2px solid lightgrey;
-    background: #f3f3f3;
     text-align:center;
+    font-weight: bold;
+    margin-top: 5pt;
+    margin-left: 180pt;
+    background: #6dff63;
 }
 .addFigure:active{
-    background: #c9f3f1;
+    background: #e2ffbe;
 }
 
 h1{
@@ -40,20 +64,31 @@ h1{
 }
 
 .figure-list{
-    margin-top: 60pt;
-    width: 80%;
+    margin-top: 10pt;
+    width: 1080pt;
     position: relative;
     left: 50%;
     transform: translate(-50%, 0);
+    background-color: white;
 }
 
 td{
-    border: 2px solid #254141;
+    border: 2px solid purple;
     border-collapse: collapse;
+    cursor: default;
 }
 .figure-list .deleteLink{
     height: 30px;
     width: 30px;
     border: none;
+    cursor: pointer;
     background: white url("https://img.icons8.com/ios/30/000000/trash--v1.png") no-repeat;
+}
+
+.figure-list .editLink{
+    height: 30px;
+    width: 30px;
+    border: none;
+    cursor: pointer;
+    background: white url("https://img.icons8.com/material-outlined/30/000000/edit--v2.png") no-repeat;
 }
