--- a/src/main/resources/static/css/edit-figure.css
+++ b/src/main/resources/static/css/edit-figure.css
@@ -15,77 +15,72 @@ html, body {
     font-size: 15px;
     font-family: Roboto;
 }
+
 .figure{
-
-}
-.figure-list td{
-    border: 2px solid purple;
-    border-collapse: collapse;
-    cursor: default;
-    width: 10pt;
-    height: 10pt;
+    margin-left: 40pt;
 }
 
+td {
+    width: 30pt;
+    height: 30pt;
+    border: 1px purple solid;
+    color: white;
+    cursor: pointer;
+
+}
 .menu-item{
     position: fixed;
     width: 50px;
     height: 50px;
-    margin-top: -10pt;
+    margin-top: 5pt;
     border-radius: 10px;
     background-image: url("https://img.icons8.com/ios/50/000000/home-page.png");
     background-repeat: no-repeat;
     background-color: #77dcff;
 }
-
-.add-ref{
-    margin-top: 15pt;
-}
-.add-ref .addFigure{
+.save{
     text-decoration: none;
-    left: 10%;
-    border: none;
-    margin-top: 5pt;
+    margin: 5pt;
     color: black;
     padding: 15px 20px;
+    cursor: pointer;
     width: 200px;
+    border: 2px solid #41ff9a;
+    background: #41ff9a;
     text-align:center;
-    font-weight: bold;
-    margin-left: 180pt;
-    background: #6dff63;
-}
-.add-ref .addFigure:active{
-    background: #e2ffbe;
 }
 
-h1{
-    font-size: 20pt;
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0);
-    text-align: center;
-}
-
-.figure-list{
-    margin-top: 10pt;
-    width: 1080pt;
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0);
+.edit-wrapper {
+    width: 300px;
+    height: auto;
+    margin: auto 0;
+    border: 2px solid lightgrey;
+    padding: 10px;
     background-color: white;
+    position: relative;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, 0);
 }
-
-.figure-list .deleteLink{
-    height: 30px;
-    width: 30px;
-    border: none;
-    cursor: pointer;
-    background: white url("https://img.icons8.com/ios/30/000000/trash--v1.png") no-repeat;
+.edit-wrapper h1{
+    text-align:center;
 }
-
-.figure-list .editLink{
-    height: 30px;
-    width: 30px;
+.edit-wrapper #save{
+    color: black;
     border: none;
+    padding: 16px 20px;
+    margin-top: 10pt;
     cursor: pointer;
-    background: white url("https://img.icons8.com/material-outlined/30/000000/edit--v2.png") no-repeat;
+    width: 200px;
+    margin-bottom: 10px;
+    opacity: 0.9;
+    font-size: 15px;
+    font-weight: bold;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 0);
+    background: rgb(248, 189, 99);
+}
+.edit-wrapper #save:active{
+    background: rgb(255, 228, 186);
 }
