--- a/src/main/resources/templates/edit-figure.html
+++ b/src/main/resources/templates/edit-figure.html
@@ -1,63 +1,45 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Тетрис. Создание фигуры</title>
-  <style>
-    td {
-      border: 1px black solid;
-      color: white;
-      cursor: pointer;
-    }
-    .menu-item{
-      width: 30px;
-      height: 30px;
-      background-image: url("https://img.icons8.com/ios/30/000000/home-page.png");
-      background-repeat: no-repeat;
-    }
-    .save{
-      text-decoration: none;
-      margin: 5pt;
-      color: black;
-      padding: 15px 20px;
-      cursor: pointer;
-      width: 200px;
-      border: 2px solid lightgrey;
-      background: #f3f3f3;
-      text-align:center;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Тетрис. Создание фигуры</title>
+    <link th:href="@{/css/edit-figure.css}" rel="stylesheet"/>
 </head>
 <body>
 <input id="figureId" hidden th:value="${figureId}">
-<a th:href="@{/main}"><div class="menu-item"></div></a>
-<table class="figure" style="border: 2px solid #254141; margin-left: 30pt">
-  <tr>
-    <td id="0-0">000</td>
-    <td id="0-1">000</td>
-    <td id="0-2">000</td>
-    <td id="0-3">000</td>
-  </tr>
-  <tr>
-    <td id="1-0">000</td>
-    <td id="1-1">000</td>
-    <td id="1-2">000</td>
-    <td id="1-3">000</td>
-  </tr>
-  <tr>
-    <td id="2-0">000</td>
-    <td id="2-1">000</td>
-    <td id="2-2">000</td>
-    <td id="2-3">000</td>
-  </tr>
-  <tr>
-    <td id="3-0">000</td>
-    <td id="3-1">000</td>
-    <td id="3-2">000</td>
-    <td id="3-3">000</td>
-  </tr>
-</table>
-<button id="save">Сохранить</button>
+<a th:href="@{/main}">
+    <div class="menu-item"></div>
+</a>
+<div class="edit-wrapper">
+    <h1>Редактирование фигуры</h1>
+    <table class="figure" style="border: 2px solid purple;">
+        <tr>
+            <td id="0-0">000</td>
+            <td id="0-1">000</td>
+            <td id="0-2">000</td>
+            <td id="0-3">000</td>
+        </tr>
+        <tr>
+            <td id="1-0">000</td>
+            <td id="1-1">000</td>
+            <td id="1-2">000</td>
+            <td id="1-3">000</td>
+        </tr>
+        <tr>
+            <td id="2-0">000</td>
+            <td id="2-1">000</td>
+            <td id="2-2">000</td>
+            <td id="2-3">000</td>
+        </tr>
+        <tr>
+            <td id="3-0">000</td>
+            <td id="3-1">000</td>
+            <td id="3-2">000</td>
+            <td id="3-3">000</td>
+        </tr>
+    </table>
+    <button id="save">Сохранить</button>
+</div>
 <script type="text/javascript"
         src="https://code.jquery.com/jquery-1.11.1.js"></script>
 <script type="text/javascript" th:src="@{/js/edit-figure.js}"></script>
