--- a/src/main/resources/templates/figures.html
+++ b/src/main/resources/templates/figures.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <a th:href="@{/main}"><div class="menu-item"></div></a>
-    <button th:href="@{/create-figure}" class="addFigure">Добавить фигуру</button>
+    <div class="add-ref">
+        <a th:href="@{/create-figure}" class="addFigure">Добавить фигуру</a>
+    </div>>
    <!-- <h1>Список фигур</h1> -->
     <div class="figure-list">
 
