--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -19,6 +19,7 @@
       <p id="result">результат</p>
     </div>
     <canvas id="game"></canvas>
+    <canvas id="gridBG" style="position: fixed"></canvas>
     <table id="nextFig"></table>
   </div>
   <div class="modal">
