Отредактированы стили страницы настроек уровня

--- a/src/main/resources/templates/figures-in-level.html
+++ b/src/main/resources/templates/figures-in-level.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Фигуры в уровне</title>
+    <title>Тетрис. Фигуры на уровне</title>
     <link th:href="@{/css/figures.css}" rel="stylesheet" />
 </head>
 <body>
