--- a/src/main/resources/templates/level.html
+++ b/src/main/resources/templates/level.html
@@ -2,54 +2,56 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Уровень сложности</title>
-    <style>
-        td{
-            border: 1px black solid;
-            width: 20px;
-            heigth: 20px;
-            margin: 0;
-            font-size: 14px;
-        }
-        #rangeList1{
-            display: flex;
-            justify-content: space-around;
-            width: 139px;
-        }
-    </style>
+    <title>Тетрис. Уровень сложности</title>
+    <link th:href="@{/css/level.css}" rel="stylesheet"/>
 </head>
 <body>
-    <input hidden id="levelId" th:value="${level.getId()}">
-    <a th:href="@{/main}"><div class="menu-item">Вернуться на главную страницу</div></a>
-    <h1 id="pageName"></h1>
-    <h2>Список фигур</h2>
-    <a th:href="@{/figs-in-level/{id}(id=${level.getId()})}" class="addFigure">Изменить набор фигур</a>
-    <div class="figure-list">
+<input hidden id="levelId" th:value="${level.getId()}">
+<a th:href="@{/main}">
+    <div class="menu-item"></div>
+</a>
+<div class="level-wrapper">
+    <div class="level-items">
+        <h1 id="pageName"></h1>
+        <h2>Список фигур</h2>
+        <a th:href="@{/figs-in-level/{id}(id=${level.getId()})}" class="addFigure" id="change">Изменить набор фигур</a>
+        <div class="figure-list">
+        </div>
+        <h2>Список стаканов</h2>
+        <a th:href="@{/glass-in-level/{id}(id=${level.getId()})}" class="addFigure">Изменить стакан</a>
+        <br>
+        <div class="lvl-glass">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>Номер</th>
+                    <th>Высота</th>
+                    <th>Ширина</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td th:text="${glass.getId()}"></td>
+                    <td th:text="${glass.getHeight()}"></td>
+                    <td th:text="${glass.getWidth()}"></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <h2>Скорость падения фигур</h2>
+        <input class="speed" type="range" min="1" max="4" step="1" th:value="${level.speed}" list="rangeList1">
+        <datalist id="rangeList1">
+            <option value="1" label="0.5">
+            <option value="2" label="1.0">
+            <option value="3" label="1.5">
+            <option value="4" label="2.0">
+        </datalist>
+        <br>
+        <button class="saveLevel">Сохранить настройки уровня</button>
     </div>
-    <h2>Список стаканов</h2>
-    <a th:href="@{/glass-in-level/{id}(id=${level.getId()})}" class="addFigure">Изменить стакан</a>
-    <br>
-    <label>Id</label>
-    <label th:text="${glass.getId()}"></label>
-    <br>
-    <label>Высота</label>
-    <label th:text="${glass.getHeight()}"></label>
-        <br>
-    <label>Ширина</label>
-    <label th:text="${glass.getWidth()}"></label>
-        <br>
-    <h2>Скорость падения фигур</h2>
-    <input class="speed" type="range" min="1" max="4" step="1" th:value="${level.speed}" list="rangeList1">
-    <datalist id="rangeList1">
-        <option value="1" label="0.5">
-        <option value="2" label="1">
-        <option value="3" label="1.5">
-        <option value="4" label="2">
-    </datalist>
-    <br>
-    <button class="saveLevel">Сохранить настройки уровня</button>
-    <script type="text/javascript"
-            src="https://code.jquery.com/jquery-1.11.1.js"></script>
-    <script type="text/javascript" th:src="@{/js/level.js}"></script>
+</div>
+<script type="text/javascript"
+        src="https://code.jquery.com/jquery-1.11.1.js"></script>
+<script type="text/javascript" th:src="@{/js/level.js}"></script>
 </body>
 </html>
