--- a/src/main/resources/templates/figures-in-level.html
+++ b/src/main/resources/templates/figures-in-level.html
@@ -3,16 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Тетрис. Фигуры на уровне</title>
-    <link th:href="@{/css/figures.css}" rel="stylesheet" />
+    <link th:href="@{/css/figures-in-level.css}" rel="stylesheet"/>
 </head>
 <body>
+<a th:href="@{/main}">
+    <div class="menu-item"></div>
+</a>
 <input hidden id="levelId" th:value="${levelId}">
-<a th:href="@{/main}"><div class="menu-item">Вернуться на главную страницу</div></a>
-<h1>Список фигур</h1>
-<div class="figure-list">
-<!--Здесь формируется список фигур-->
-</div>
 <button class="saveButton">Сохранить</button>
+<div class="wrapper">
+    <h1>Список фигур</h1>
+    <div class="figure-list">
+        <!--Здесь формируется список фигур-->
+    </div>
+</div>
 <script type="text/javascript"
         src="https://code.jquery.com/jquery-1.11.1.js"></script>
 <script type="text/javascript" th:src="@{/js/figures-in-level.js}"></script>
