Отредактирован размер шрифта

--- a/src/main/resources/static/css/figures.css
+++ b/src/main/resources/static/css/figures.css
@@ -52,6 +52,7 @@ html, body {
     font-weight: bold;
     margin-left: 180pt;
     background: #6dff63;
+    font-size: 18pt;
 }
 .add-ref .addFigure:active{
     background: #e2ffbe;
