--- a/src/main/resources/templates/glass-in-level.html
+++ b/src/main/resources/templates/glass-in-level.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Стаканы в уровне</title>
+    <title>Тетрис. Стаканы в уровне</title>
     <link media="all" th:href="@{/css/glasses-in-level.css}" rel="stylesheet" type="text/css"/>
 </head>
 <body>
