--- a/src/main/resources/static/css/glasses.css
+++ b/src/main/resources/static/css/glasses.css
@@ -23,12 +23,13 @@ html, body {
     color: black;
     padding: 15px 20px;
     cursor: pointer;
-    width: 200px;
+    width: 300px;
     text-align:center;
     font-weight: bold;
     margin-top: 5pt;
     margin-left: 100px;
     background: #faff63;
+    font-size: 16pt;
 }
 
 .add:active{
@@ -44,6 +45,7 @@ html, body {
     transform: translate(-50%, 0);
     border: 15px solid #c9ffff;
     border-collapse: collapse;
+    font-size: 16pt;
 }
 .table th {
     font-weight: bold;
@@ -133,27 +135,36 @@ html, body {
     position: fixed;
     left: 20%;
     transform: translate(-50%, 0);
-    margin: 0 auto 15px;
     color: black;
     padding: 15px 20px;
 }
 
 .modal input[type=number]{
     width: 100px;
-    padding: 15px;
+    padding: 5pt;
     margin-left: 60px;
     border: none;
     background: #f1f1f1;
     position: fixed;
     left: 40%;
     transform: translate(-50%, 0);
+    font-size: 16pt;
 }
-.modal .in_width, .modal .l_width{
+.modal .in_width{
     margin-top: 50px;
+    font-size: 16pt;
 }
-
-.modal .in_height, .modal .l_height{
+.modal .l_width{
+    margin-top: 37px;
+    font-size: 16pt;
+}
+.modal .in_height{
     margin-top: 20px;
+    font-size: 16pt;
+}
+.modal .l_height{
+    margin-top: 12px;
+    font-size: 16pt;
 }
 
 .modal input[type=number]:focus{
@@ -169,12 +180,13 @@ html, body {
     margin-top: 90px;
     margin-bottom: 10px;
     opacity: 0.8;
-    font-size: 15px;
+    font-size: 16pt;
     font-weight: bold;
     position: relative;
     left: 35%;
     transform: translate(-50%, 0);
     border: 2px solid lightgrey;
+
 }
 
 .modal input[type=submit]:active{
