--- a/src/main/resources/static/css/login_style.css
+++ b/src/main/resources/static/css/login_style.css
@@ -25,7 +25,7 @@ p{
     font-size: 15pt;
     font-weight: bold;
     text-align:center;
-
+    font-size: 16pt;
 }
 
 .error{
@@ -49,11 +49,11 @@ p{
     width: 200px;
     margin-bottom: 10px;
     opacity: 0.8;
-    font-size: 15px;
     font-weight: bold;
     position: relative;
     left: 50%;
     transform: translate(-50%, 0);
+    font-size: 16pt;
 }
 
 .form-container {
@@ -79,6 +79,7 @@ p{
     position: relative;
     left: 50%;
     transform: translate(-50%, 0);
+    font-size: 16pt;
 }
 
 .form-container input[type=text]:focus, .form-container input[type=password]:focus {
@@ -101,6 +102,7 @@ p{
     left: 50%;
     transform: translate(-50%, 0);
     background: #1af1d0;
+    font-size: 16pt;
 }
 
 .form-container .submit_btn:active{
