--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -45,7 +45,7 @@ html, body {
 }
 .menu-item{
     color: black;
-    font-size: 15px;
+    font-size: 16pt;
     font-weight: bold;
 }
 
@@ -54,10 +54,10 @@ html, body {
     padding: 16px 20px;
     margin-top: 10pt;
     cursor: pointer;
-    width: 200px;
+    width: 250px;
     margin-bottom: 10px;
     opacity: 0.9;
-    font-size: 15px;
+    font-size: 16pt;
     font-weight: bold;
     position: relative;
     left: 50%;
@@ -162,6 +162,7 @@ html, body {
     width: 200px;
     background: #f3f3f3;
     text-align:center;
+    font-size: 16pt;
 }
 .modal .modal-item:active{
     background: #c9f3f1;
