--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Тетрис. Авторизация.</title>
+    <title>Тетрис. Авторизация</title>
     <!--<link rel="stylesheet" href="../static/css/login_style.css"/>-->
     <link media="all" th:href="@{/css/login_style.css}" rel="stylesheet" type="text/css"/>
 </head>
