Отредактирован размер шрифта

--- a/src/main/resources/static/css/settings.css
+++ b/src/main/resources/static/css/settings.css
@@ -62,7 +62,7 @@ html, body {
     width: 200px;
     margin-bottom: 10px;
     opacity: 0.9;
-    font-size: 15px;
+    font-size: 16pt;
     font-weight: bold;
     position: relative;
     left: 50%;
