--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -12,7 +12,7 @@
         <div class="menu-wrapper">
 
                 <a class="aboutDev_btn" th:href="@{/info-students}"></a>
-                <a class="aboutSyst_btn"></a>
+                <a class="aboutSyst_btn" th:href="@{/info-system}"></a>
 
             <h1 th:inline="text">Игра «Тетрис»</h1>
             <div class="menu-items">
