Отредактированы страницы информации

--- a/src/main/resources/templates/info-students.html
+++ b/src/main/resources/templates/info-students.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Информация о разработчиках</title>
+    <title>Тетрис. Информация о разработчиках</title>
+    <link media="all" th:href="@{/css/info.css}" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-
+<a th:href="@{/main}">
+    <div class="menu-item"></div>
+</a>
+<div class ="wrapper">
+    <h1>Игра "Тетрис"</h1>
+    <h2>Информация о разработчиках</h2>
+</div>
 </body>
 </html>
