--- a/src/main/resources/static/css/info.css
+++ b/src/main/resources/static/css/info.css
@@ -15,7 +15,7 @@ html, body {
     font-size: 15px;
     font-family: Roboto;
 }
-.menu-item{
+.home{
     position: fixed;
     margin-top: 5pt;
     width: 50px;
